# codegeex-fastertransformer

./: CMakeLists.txt  README.md  api.py  api_incremental.py  convert.sh  get_ckpt_ft.py  get_ckpt_torch_fast.py  make_all.sh  post.py  test_result1202.txt
docs/: inference.md
examples/cpp/: CMakeLists.txt
examples/pytorch/codegeex/utils/: codegeex.py  convert_tp.py  tokenizer.py
src/fastertransformer/kernels/: CMakeLists.txt  activation_kernels.cu  activation_kernels.h  beam_search_penalty_kernels.h  codegeex_kernels.cu  codegeex_kernels.h  codegeex_top_decoder_masked_multihead_attention.cu  codegeex_top_decoder_masked_multihead_attention.h  decoding_kernels.cu  decoding_kernels.h  layernorm_kernels.cu  matrix_vector_multiplication.cu  matrix_vector_multiplication.h  online_softmax_beamsearch_kernels.h  sampling_penalty_kernels.cu  sampling_penalty_kernels.h  sampling_topk_kernels.cu  sampling_topk_kernels.h  sampling_topp_kernels.cu  sampling_topp_kernels.h  stop_criteria_kernels.cu  stop_criteria_kernels.h  unfused_attention_kernels.cu  unfused_attention_kernels.h
src/fastertransformer/layers/: CMakeLists.txt  DenseWeight.h  DynamicDecodeBaseLayer.h  DynamicDecodeLayer.cc  DynamicDecodeLayer.h  FfnLayer.cc  FfnLayer.h  TensorParallelFastGeluFfnLayer.cc  TensorParallelFastGeluFfnLayer.h
src/fastertransformer/layers/attention_layers/: CMakeLists.txt  CodegeexTopContextAttentionLayer.cc  CodegeexTopContextAttentionLayer.h  DecoderSelfAttentionLayer.cc  DecoderSelfAttentionLayer.h  DecoderTopSelfAttentionLayer.cc  DecoderTopSelfAttentionLayer.h  GptContextAttentionLayer.cc  GptContextAttentionLayer.h  TensorParallelCodegeexTopContextAttentionLayer.cc  TensorParallelCodegeexTopContextAttentionLayer.h  TensorParallelDecoderTopSelfAttentionLayer.cc  TensorParallelDecoderTopSelfAttentionLayer.h
src/fastertransformer/layers/beam_search_layers/: BaseBeamSearchLayer.cu  OnlineBeamSearchLayer.cu  OnlineBeamSearchLayer.h
src/fastertransformer/layers/sampling_layers/: BaseSamplingLayer.cc  BaseSamplingLayer.h  TopKSamplingLayer.cu  TopKSamplingLayer.h  TopPSamplingLayer.cu  TopPSamplingLayer.h
src/fastertransformer/models/: CMakeLists.txt
src/fastertransformer/models/codegeex/: CMakeLists.txt  Codegeex.cc  Codegeex.h  CodegeexContextDecoder.cc  CodegeexContextDecoder.h  CodegeexDecoder.cc  CodegeexDecoder.h  CodegeexDecoderLayerWeight.cc  CodegeexDecoderLayerWeight.h  CodegeexTopQueryLayerWeight.cc  CodegeexTopQueryLayerWeight.h  CodegeexWeight.cc  CodegeexWeight.h
src/fastertransformer/models/multi_gpu_codegeex/: CMakeLists.txt  ParallelCodegeex.cc  ParallelCodegeex.h  ParallelCodegeexContextDecoder.cc  ParallelCodegeexContextDecoder.h  ParallelCodegeexDecoder.cc  ParallelCodegeexDecoder.h  ParallelCodegeexDecoderLayerWeight.cc  ParallelCodegeexDecoderLayerWeight.h  ParallelCodegeexTopQueryLayerWeight.cc  ParallelCodegeexTopQueryLayerWeight.h  ParallelCodegeexWeight.cc  ParallelCodegeexWeight.h  codegeex_gemm.cc
src/fastertransformer/th_op/: CMakeLists.txt  th_utils.cu
src/fastertransformer/th_op/codegeex/: CMakeLists.txt  CodegeexOp.cc  CodegeexOp.h
src/fastertransformer/th_op/common/: CMakeLists.txt
src/fastertransformer/th_op/multi_gpu_codegeex/: CMakeLists.txt  ParallelCodegeexOp.cc  ParallelCodegeexOp.h
src/fastertransformer/triton_backend/: CMakeLists.txt
src/fastertransformer/utils/: CMakeLists.txt  Tensor.h  cuda_type_utils.cuh  cuda_utils.cc  memory_utils.cu  memory_utils.h  string_utils.h
src/fastertransformer/utils/gemm_test/: CMakeLists.txt  codegeex_gemm_func.cc  codegeex_gemm_func.h
tests/unittests/: CMakeLists.txt
